# rust-hdbconnect

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANA_in_SCP.md  LICENSE-MIT  README.md  TLS_Connection.md  db_access.json  db_access_2_0.json  db_access_2_3.json  db_access_system.json  db_access_system_2_0.json  db_access_system_2_3.json  fixmes.txt  rustfmt.toml
hdbconnect/: Cargo.toml  README.md
hdbconnect/examples/: compare_with_java.rs  deserialize_strings_to_bytes.rs  first.rs  setup_db_for_tests.rs  version_numbers.rs
hdbconnect/src/: .markdownlint.json  code_examples.md  code_examples.rs  connection.rs  connection_manager.rs  lib.rs  prepared_statement.rs  r2d2.rs
hdbconnect/tests/: test_010_connect.rs  test_011_invalid_password.rs  test_012_connect_other_user.rs  test_013_logon_errors.rs  test_015_result_set.rs  test_015_resultset.rs  test_016_selectforupdate.rs  test_020_deser.rs  test_021_longdate_chrono.rs  test_021_longdate_time.rs  test_022_seconddate_chrono.rs  test_022_seconddate_time.rs  test_023_secondtime_chrono.rs  test_023_secondtime_time.rs  test_024_daydate_chrono.rs  test_024_daydate_time.rs  test_025_decimals.rs  test_026_numbers_as_strings.rs  test_027_small_decimals.rs  test_028_timestamp_chrono.rs  test_028_timestamp_time.rs  test_029_arrays.rs  test_030_prepare.rs  test_031_transactions.rs  test_032_blobs.rs  test_033_clobs.rs  test_034_nclobs.rs  test_035_text.rs  test_036_bool.rs  test_037_spatial.rs  test_038_compression.rs  test_040_datatypes_a.rs  test_041_datatypes_b.rs  test_042_numeric_conversion.rs  test_050_procedures.rs  test_051_management_console.rs  test_060_metadata.rs  test_070_explain.rs  test_080_conn_pooling_with_r2d2.rs  test_090_xa_transactions.rs  (+2 more)
hdbconnect_async/: Cargo.toml  README.md
hdbconnect_async/examples/: readme_example.rs  version_numbers.rs
hdbconnect_async/src/: .markdownlint.json  bb8.rs  code_examples.md  code_examples.rs  connection.rs  connection_manager.rs  lib.rs  prepared_statement.rs  rocket_pool.rs
hdbconnect_async/test_backlog/: smp-blabla.txt
hdbconnect_async/tests/: test_010_connect.rs  test_011_invalid_password.rs  test_012_connect_other_user.rs  test_013_logon_errors.rs  test_015_result_set.rs  test_015_resultset.rs  test_016_selectforupdate.rs  test_020_deser.rs  test_021_longdate_chrono.rs  test_021_longdate_time.rs  test_022_seconddate_chrono.rs  test_022_seconddate_time.rs  test_023_secondtime_chrono.rs  test_023_secondtime_time.rs  test_024_daydate_chrono.rs  test_024_daydate_time.rs  test_025_decimals.rs  test_026_numbers_as_strings.rs  test_027_small_decimals.rs  test_028_timestamp_chrono.rs  test_028_timestamp_time.rs  test_029_arrays.rs  test_030_prepare.rs  test_031_transactions.rs  test_032_blobs.rs  test_033_clobs.rs  test_034_nclobs.rs  test_035_text.rs  test_036_bool.rs  test_037_spatial.rs  test_040_datatypes_a.rs  test_041_datatypes_b.rs  test_042_numeric_conversion.rs  test_050_procedures.rs  test_051_management_console.rs  test_060_metadata.rs  test_070_explain.rs  test_080_conn_pooling_for_rocket.rs  test_080_conn_pooling_with_r2d2.rs  test_081_conn_pooling_for_bb8.rs  (+3 more)
hdbconnect_async/tests_backlog/: test_020_deser.rs  test_021_longdate_time.rs  test_023_secondtime_time.rs  test_024_daydate_chrono.rs  test_027_small_decimals.rs  test_032_blobs.rs  test_040_datatypes_a.rs  test_070_explain.rs  test_080_conn_pooling_with_r2d2.rs
hdbconnect_impl/: Cargo.toml  README.md
hdbconnect_impl/src/: a_sync.rs  async_prepared_statement_core.rs  base.rs  conn.rs  hdb_error.rs  hdb_response.rs  hdb_return_value.rs  internal_returnvalue.rs  lib.rs  protocol.rs  row.rs  rows.rs  serde_db_impl.rs  sync.rs  sync_prepared_statement_core.rs  types_impl.rs  url.rs  xa_impl.rs
hdbconnect_impl/src/a_sync/: blob.rs  clob.rs  connection.rs  hdb_response.rs  hdb_return_value.rs  lib.rs.to be removed  mod.rs  nclob.rs  prepared_statement.rs  prepared_statement_core.rs  result_set.rs  resultset.rs  rocket_pool.rs  rs_state.rs
hdbconnect_impl/src/base/: hdb_error.rs  internal_returnvalue.rs  prepared_statement_core.rs  row.rs  rows.rs  rs_core.rs  rs_state.rs  xmutexed.rs
hdbconnect_impl/src/conn/: am_conn_core.rs  async_tcp_client.rs  command_options.rs  connection_configuration.rs  connection_core.rs  connection_statistics.rs  initial_request.rs  logging_reader.rs  logging_writer.rs  params.rs  session_state.rs  sync_tcp_client.rs  tcp_client.rs  url.rs
hdbconnect_impl/src/conn/async_tcp_client/: async_plain_tcp_client.rs  plain_async_tcp_client.rs
hdbconnect_impl/src/conn/authentication/: auth_requests.rs  authenticate.rs  authenticator.rs  crypto_util.rs  mod.rs  scram_pbkdf2_sha256.rs  scram_sha256.rs
hdbconnect_impl/src/conn/params/: connect_params.rs  connect_params_builder.rs  cp_url.rs  into_connect_params.rs  into_connect_params_builder.rs  tls.rs
hdbconnect_impl/src/conn/sync_tcp_client/: sync_plain_tcp_client.rs  sync_tls_tcp_client.rs
hdbconnect_impl/src/conn/tcp_client/: async_plain_tcp_client.rs  async_tls_tcp_client.rs  sync_plain_tcp_client.rs  sync_tls_tcp_client.rs
hdbconnect_impl/src/protocol/: message_type.rs  mod.rs  part.rs  part_attributes.rs  partkind.rs  parts.rs  reply.rs  reply_type.rs  request.rs  request_type.rs  server_usage.rs  util.rs  util_async.rs  util_sync.rs
hdbconnect_impl/src/protocol/parts/: am_rs_core.rs  async_resultset.rs  authfields.rs  client_context.rs  client_info.rs  command_info.rs  connect_options.rs  db_connect_info.rs  execution_result.rs  fetch_options.rs  (+28 more)
hdbconnect_impl/src/serde_db_impl/: de.rs  ser.rs  to_hana.rs
hdbconnect_impl/src/sync/: blob.rs  clob.rs  connection.rs  connection_manager.rs  hdb_response.rs  hdb_return_value.rs  lib.rs  mod.rs  nclob.rs  prepared_statement.rs  prepared_statement_core.rs  result_set.rs  resultset.rs  rs_state.rs
hdbconnect_impl/src/types_impl/: daydate.rs  decimal.rs  hdb_decimal.rs  lob.rs  longdate.rs  seconddate.rs  secondtime.rs  wire_decimal.rs
hdbconnect_impl/src/xa_impl/: async_c_resource_manager.rs  mod.rs  sync_c_resource_manager.rs
(+493 files in other folders)
