[workspace]
members = [
    # projection crates, should be used for consumption
    "hdbconnect",
    "hdbconnect_async",

    # the code is here, should not be consumed directly
    "hdbconnect_impl",
]
resolver = "2"

[workspace.package]
# see ./doc/version_policy.md
version = "0.31.0"

authors = [
    "emabee <meinolf.block-hd(at)t-online.de>",
    "Dirk Leifeld <dirk.leifeld(at)sap.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-hdbconnect"
keywords = ["relational", "database", "driver", "HANA"]
categories = ["database"]
include = ["LICENSE-*", "README.md", "CHANGELOG.md"]
