[workspace]
members = [
    # projection crates, should be used for consumption
    "hdbconnect",
    "hdbconnect_async",

    # the code is here, should not be consumed directly
    "hdbconnect_impl",
]
resolver = "2"
exclude = ["scripts"]

[workspace.package]
# see ./doc/version_policy.md
version = "0.32.0"

authors = [
    "emabee <meinolf.block-hd(at)t-online.de>",
    "Dirk Leifeld <dirk.leifeld(at)sap.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-hdbconnect"
keywords = ["relational", "database", "driver", "HANA"]
categories = ["database"]
include = ["LICENSE-*", "README.md", "CHANGELOG.md"]


[workspace.dependencies]
hdbconnect_impl = { path = "hdbconnect_impl", version = "0.32.0", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12",
] }
