[package]
name = "hdbconnect"
version = "0.25.0-alpha-1"
authors = ["emabee <meinolf.block@sap.com>","Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-hdbconnect"
documentation = "https://docs.rs/hdbconnect/"

description = "A pure rust driver for SAP HANA(TM)"
keywords = ["relational", "database", "driver", "serde", "HANA"]
categories = ["database"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = false

[features]
default = []
r2d2_pool = ["hdbconnect_impl/r2d2_pool"]

[dependencies]
hdbconnect_impl = { path = "../hdbconnect_impl", features = ["sync"] }

[dev-dependencies]
bigdecimal = {version = "0.3", features = ["serde"]}
cesu8 = "1.1"
chrono = { version = "0.4", features = ["serde"]}
dist_tx = {path = "../../dist_tx"}
flexi_logger = "0.24"
log = "0.4"
num = "0.4"
num-bigint = "0.4.0"
rand = "0.8"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10.0"
time = {version = "0.3", features = ["formatting", "macros", "parsing", "serde"]}
version-sync = "0.9"
