[package]
name = "hdbconnect"
authors.workspace = true
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A synchronous pure rust database driver for SAP HANA(TM)"
documentation = "https://docs.rs/hdbconnect/"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
# To make use of this globally, do: 
#    export RUSTDOCFLAGS="--cfg docsrs" 
# before calling 
#    cargo +nightly doc --package hdbconnect --all-features --no-deps
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
r2d2_pool = ["hdbconnect_impl/r2d2_pool"]
dist_tx = ["hdbconnect_impl/dist_tx_sync"]

[dependencies]

[dependencies.hdbconnect_impl]
version = "0.26.0"
path = "../hdbconnect_impl"
default-features = false
features = ["sync"]

[dev-dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
cesu8 = "1.1"
chrono = { version = "0.4", features = ["serde"] }
# dist_tx = { version = "0.4", features = ["sync"], path = "../../dist_tx" }
dist_tx = { version = "0.4", features = ["sync"] }
flexi_logger = "0.27"
log = "0.4"
num = "0.4"
num-bigint = "0.4.0"
rand = "0.8"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10.0"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
version-sync = "0.9"
