[package]
name = "hdbconnect"
authors.workspace = true
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A synchronous pure rust database driver for SAP HANA(TM)"
documentation = "https://docs.rs/hdbconnect/"
keywords.workspace = true
categories.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
rust-version = "1.82.0"

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
# To make use of this globally, do:
#    export RUSTDOCFLAGS="--cfg docsrs"
# before calling
#    cargo +nightly doc --package hdbconnect --all-features --no-deps
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
r2d2_pool = ["r2d2", "log"]
dist_tx = ["hdbconnect_impl/dist_tx_sync"]

[dependencies]
hdbconnect_impl = { workspace = true, features = ["sync"] }

r2d2 = { version = "0.8", optional = true }
log = { version = "0.4", optional = true }


[dev-dependencies]
rustls = { workspace = true, features = ["ring"] }

bigdecimal = { version = "0.4", features = ["serde"] }
cesu8 = "1.1"
chrono = { version = "0.4", features = ["serde"] }
# dist_tx = { features = ["sync"], path = "../../dist_tx" }
dist_tx = { version = "0.5", features = ["sync"] }
flexi_logger = "0.29"
log = "0.4"
num = "0.4"
num-bigint = "0.4.0"
rand = "0.9"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10.8"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
version-sync = "0.9"
