[package]
name = "hdbconnect_async"
version = "0.25.0"
authors = ["emabee <meinolf.block@sap.com>","Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-hdbconnect"
documentation = "https://docs.rs/hdbconnect/"

description = "A pure rust driver for SAP HANA(TM)"
keywords = ["relational", "database", "driver", "serde", "HANA"]
categories = ["database"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = false

[features]
default = []
alpha_routing = []
rocket_pool = ["rocket_db_pools", "rocket"]

[dependencies]
hdbconnect_impl = { path = "../hdbconnect_impl", features = ["async"] }
dist_tx_async = {path = "../../dist_tx/dist_tx_async"}
# dist_tx_async = "*"
async-trait = {version = "0.1"}
log = "0.4"
rocket_db_pools = {version = "0.1.0-rc.2", optional = true}
rocket = {version = "0.5.0-rc.2", optional = true}
serde = { version = "1.0", features = ["derive"] }
# # serde_db = { path = "../serde_db" }
serde_db = "0.11"
tokio = {version = "1.23", features = ["io-util","sync","rt","macros"]}

[dev-dependencies]
bigdecimal = {version = "0.3", features = ["serde"]}
cesu8 = "1.1"
chrono = { version = "0.4", features = ["serde"]}
flexi_logger = "0.24"
num = "0.4"
num-bigint = "0.4.0"
rand = "0.8"
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10.0"
time = {version = "0.3", features = ["formatting", "macros", "parsing", "serde"]}
tokio-test = "0.4"
version-sync = "0.9"
