[package]
name = "hdbconnect_async"
authors.workspace = true
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "An asynchronous pure rust database driver for SAP HANA(TM)"
documentation = "https://docs.rs/hdbconnect_async/"
keywords = ["asynchronous", "relational", "database", "driver", "HANA"]
categories.workspace = true
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
rust-version = "1.78.0"

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
# To make use of this globally, do: 
#    export RUSTDOCFLAGS="--cfg docsrs" 
# before calling 
#    cargo +nightly doc --package hdbconnect_async --all-features --no-deps
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
bb8_pool = ["async-trait", "bb8", "log", "tokio"]
rocket_pool = ["rocket_db_pools", "rocket"]
dist_tx = ["hdbconnect_impl/dist_tx_async"]

[dependencies.hdbconnect_impl]
version = "0.30.1"
path = "../hdbconnect_impl"
default-features = false
features = ["async"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bb8 = { version = "0.8", optional = true }
log = { version = "0.4", optional = true }
rocket_db_pools = { version = "0.2", optional = true }
rocket = { version = "0.5.0", optional = true }
tokio = { version = "1.23", features = ["rt"], optional = true }

[dev-dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
cesu8 = "1.1"
chrono = { version = "0.4", features = ["serde"] }
# dist_tx = { features = ["async"], path = "../../dist_tx" }
dist_tx = { version = "0.5", features = ["async"] }
flexi_logger = "0.29"
log = "0.4"
num = "0.4"
num-bigint = "0.4.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10.8"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.23", features = [
    "io-util",
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
] }
tokio-test = "0.4"
version-sync = "0.9"
