[package]
name = "hdbconnect_impl"
version = "0.25.0-alpha-2"
authors = ["emabee <meinolf.block@sap.com>","Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-hdbconnect"
documentation = "https://docs.rs/hdbconnect/"

description = "A pure rust driver for SAP HANA(TM)"
keywords = ["relational", "database", "driver", "serde", "HANA"]
categories = ["database"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = false

[features]
default = []
async = ["dist_tx/async", "async-trait", "tokio"]
sync = ["dist_tx/sync"]
r2d2_pool = ["sync", "r2d2"]
rocket_pool = ["async", "rocket_db_pools", "rocket"]
alpha_routing = []

[dependencies]
bigdecimal = {version = "0.3", features = ["serde"]}
byteorder = "1.3"
cesu8 = "1.1"
crypto-common = "0.1"
async-trait = {version = "0.1", optional= true}
dist_tx = {version = "0.3"}
hex = "0.4"
hmac = "0.12"
lazy_static = "1.4.0"
log = "0.4"
num = "0.4"
num-bigint = "0.4.0"
pbkdf2 = {version = "0.11", default-features = false}
r2d2  = {version = "0.8", optional= true}
rand = "0.8"
rocket_db_pools = {version = "0.1.0-rc.2", optional = true}
rocket = {version = "0.5.0-rc.2", optional = true}
rustls = {version = "0.20", features = ["dangerous_configuration"]}
secstr = "0.5"
serde = { version = "1.0", features = ["derive"] }
# serde_db = { path = "../serde_db" }
serde_db = "0.11"
serde_json = "1.0"
sha2 = "0.10.0"
thiserror = "1.0"
time = {version = "0.3", features = ["formatting", "macros", "parsing", "serde"]}
tokio = {optional = true, version = "1.23", features = ["io-util", "net", "rt", "sync"]}
tokio-rustls = "0.23"
url = "2.1"
username = "0.2"
vec_map = "0.8"
webpki = "0.22"
webpki-roots = "0.22"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"]}
flexi_logger = "0.24"
serde_bytes = "0.11"
version-sync = "0.9"
# geo = "0.12"
# geo-types = "0.4.1"
# wkb = "*"
# wkb = { path = "../wkb" }
